osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[str [or] str].txt
error: duplicated type `str` seen in `Union[...]`
--> main.sml:1:11
     |
   1 | Foo: str | str = JsonData(path='$.foo')
     |            ^
~~~ union variant already specified here:
--> (1) main.sml:1:5
     |
   1 | Foo: str | str = JsonData(path='$.foo')
     |      ^